--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Description of MannyCard",
   "main": "index.js",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "scripts": {
     "lint": "npx eslint --ext .jsx,.js src",
     "build-dev": "webpack --progress --mode development --env verbose",
@@ -18,7 +18,7 @@
     "@ellucian/experience-extension-utils": "https://cdn.elluciancloud.com/assets/SDK/utils/1.0.0/ellucian-experience-extension-utils-1.0.0.tgz",
     "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/7.16.0/umd/path_design_system.tgz",
     "MannyCard": "file:",
-    "prop-types": "15.8.1",
+    "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intl": "5.12.5",
