--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.6.0",
-    "webpack": "5.76.0",
+    "webpack": "^5.98.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.7.4"
+    "webpack-dev-server": "^4.15.2"
   }
 }
