--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -12,7 +12,7 @@ on:
     - cron: '0 0 * * 0'  # Run weekly on Sundays
 
 jobs:
-  security:
+  security-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -35,7 +35,7 @@ jobs:
           command: test
           args: --severity-threshold=high  # Fail the build if high severity vulnerabilities are found
 
-      # Optional: Monitor your project in Snyk
+      # Monitor project in Snyk
       - name: Monitor project in Snyk
         uses: snyk/actions/node@master
         env:
@@ -43,27 +43,25 @@ jobs:
         with:
           command: monitor
 
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    needs: security  # Ensure the security job completes before this job starts
-    if: github.ref == 'refs/heads/main'  # Only run on pushes to the main branch
+    needs: security-check  # Ensure the security job completes before this job starts
+    if: github.ref == 'refs/heads/main' 
     steps:
       - uses: actions/checkout@v3
 
       # Set up your project's specific environment
-      - name: Set up Node.js # Example for Node.js project
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
           
-      - name: Install dependencies # Example for Node.js
+      - name: Install dependencies
         run: npm install
         
-      # Build step
+      # Deploy steps would go here (if applicable)
       - name: Build
         env:
+          EXPERIENCE_EXTENSION_ENABLED: true
           EXPERIENCE_EXTENSION_UPLOAD_TOKEN: ${{ secrets.EXPERIENCE_EXTENSION_UPLOAD_TOKEN }}
-        run: npm run deploy-dev --env forceUpload 
-        
-      # Adjust according to your build command
-      # Deploy steps would go here (if applicable)
+        run: npm run deploy-dev --env forceUpload
